# sim8086

./: .gitignore  CMakeLists.txt  LICENSE  README.md  auto_commit.sh
.github/workflows/: release.yml  release_linux.yml  release_mac.yml  release_windows.yml
src/: cpu8086.cpp  cpu8086.h  cpu_exec.cpp  cpu_ops.cpp  cpu_state.h  emulator.cpp  emulator.h  emulator_window.cpp  emulator_window.h  mainwindow.cpp  mainwindow.h
src/components/: code_editor.cpp  code_editor.h  dos_terminal.cpp  dos_terminal.h  memory_view.cpp  memory_view.h  register_view.cpp  register_view.h  syntax_highlighter.cpp  syntax_highlighter.h  traffic_light.cpp  traffic_light.h
src/managers/: execution_manager.cpp  execution_manager.h  gui_manager.cpp  gui_manager.h  hardware_controller.cpp  hardware_controller.h  ui_manager.cpp
src/tools/: calculator.cpp  calculator.h  converter.cpp  converter.h  settings.cpp  settings.h
